--- a/index.html
+++ b/index.html
@@ -4,19 +4,15 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Aamir's Blog</title>
-        <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/5.10.2/css/font-awesome.min.css"> -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css">
-        
-        <script src="lib/js/pong/controls.js"></script>
-        <script src="lib/js/pong/settings.js"></script>
-        <script src="lib/js/pong/draw.js"></script>
-
-        <!-- <link rel="stylesheet" href="styles/debug.css"> -->
     </head>
 
-	<body onload="bigStart()">
+	<body>
 
+        <canvas id="myCanvas" style="position:absolute; top:0px; left:0px; z-index:10;margin:52px 0px 0px 0px" ></canvas>
+
+        <script>canvas = document.getElementById("myCanvas"); canvas.width = window.innerWidth; canvas.height=353</script>
         <nav class="navbar is-info" role="navigation" aria-label="main navigation" style="margin-bottom: 0px">
             <div class="navbar-brand">
                 <a class="navbar-item" href="index.html">
@@ -74,10 +70,10 @@
         </nav>
 
 
+
         <section class="hero is-black is-medium" style="margin-bottom:80px">
   <div class="hero-body">
     <div class="container">
-        <canvas id="mycanvas" width="1700px" height="350px"></canvas>
       <h1 class="title">
         Aamir's Blog
       </h1>
@@ -90,13 +86,11 @@
 
         <div class="block" style="margin-left:100px;margin-right:100px;">
             <nav class="level">
-                <!-- left side -->
                 <div class="level-left">
                     <p class="level-item"><a><strong>All</strong></a>
                     <p class="level-item"><a>New</a></p>
                     <p class="level-item"><a>Draft</a></p>
                 </div>
-                <!-- right side -->
                 <div class="level-right">
                     <div class="level-item">
                         <div class="field">
@@ -154,6 +148,7 @@
                         <div class="media">
                             <div class="media-left">
                                 <p class="title is-4">Ray Tracing</p>
+                                <p class="subtitle is-6">Coming Soon</p>
                             </div>
                         </div>
                         <div class="content">
@@ -345,6 +340,11 @@
             </div>
 
         </div>
+
+
+
+        <script src="lib/js/bundle.min.js" type="text/javascript" ></script>
+
     </body>
 
 </html>
