--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <div class="columns" style="margin-left:90px;margin-top:10px;margin-right:90px;flex-wrap:wrap">
 
             <div class="column is-2 popout">
-                <a href="">
+                <a href="./projectBlogs/rayTracerBlog.html">
                 <div class="card">
                     <div class="card-image">
                         <figure class="image is-4by3">
