--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
                             <i class="fa fa-linkedin fa-2x" style="font-size: 24px"></i>
                         </span>
                     </a>
+                    <a class="navbar-item" href="https://medium.com/@aamirsoni1551">
+                        <span class="icon">
+                            <i class="fa fa-medium" style="font-size: 24px"></i>
+                        </span>
+                    </a>
 
                 </div>
                 <div class="navbar-end" style="margin-right: 10px">
